added news section

--- a/rac90.html
+++ b/rac90.html
@@ -250,6 +250,27 @@
       </div>
     </section>
 
+    <section class="news py-5">
+      <div class="container">
+        <h2>In the news</h2>
+        <div class="row align-items-center justify-content-center">
+          <a
+            href="https://kingairnation.com/resource-air-charter-launches-the-rac90-king-air-cargo-aircraft/"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><img src="resources/imgs/kingairlogo.jpg"
+          /></a>
+          <a
+            href="https://www.aircargonews.net/airlines/freighter-operator/resource-air-conversions-launches-rac-90-cargo-king-air-conversion/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img src="resources/imgs/acn_logo.jpg" class="news-logo" />
+          </a>
+        </div>
+      </div>
+    </section>
+
     <section class="section-shipping my-5 py-5">
       <div class="container">
         <h2>Need Financing?</h2>
