--- a/cargo-services.html
+++ b/cargo-services.html
@@ -381,14 +381,13 @@
           </div>
           <div class="col-lg-6">
             <h2>Dedicated supply chain solutions</h2>
-            <h4>Are you a logistics manager?</h4>
             <p>
               Our dedicated flight operations specialist will work with you to
               guarantee your delivery every step of the way. Ask flight
               operations about how RAC can simplify your air transport needs.
             </p>
             <div class="pt-2 link-container">
-              <a href="/contact" class="btn btn-outline-primary"
+              <a href="/contact" class="btn btn-primary"
                 >Click here to discuss your next mission</a
               >
             </div>
