--- a/cargo-services.html
+++ b/cargo-services.html
@@ -55,9 +55,7 @@
 
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="tel:1-615-278-9450"
-            ><strong>Resource Air Charter</strong></a
-          >
+          <a class="nav-link" href="/"><strong>Resource Air Charter</strong></a>
         </li>
       </ul>
       <button
@@ -89,7 +87,9 @@
             <a class="nav-link" href="contact">Contact</a>
           </li>
           <li class="nav-item px-2">
-            <a class="btn btn-primary" href="tel:1-615-278-9450">Call Now</a>
+            <a class="btn btn-primary" href="tel:1-615-278-9450"
+              >(615) 278-9450</a
+            >
           </li>
         </ul>
       </div>
