--- a/special-missions.html
+++ b/special-missions.html
@@ -56,9 +56,7 @@
 
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="tel:1-615-278-9450"
-            ><strong>Resource Air Charter</strong></a
-          >
+          <a class="nav-link" href="/"><strong>Resource Air Charter</strong></a>
         </li>
       </ul>
       <button
@@ -90,7 +88,9 @@
             <a class="nav-link" href="contact">Contact</a>
           </li>
           <li class="nav-item px-2">
-            <a class="btn btn-primary" href="tel:1-615-278-9450">Call Now</a>
+            <a class="btn btn-primary" href="tel:1-615-278-9450"
+              >(615) 278-9450</a
+            >
           </li>
         </ul>
       </div>
@@ -468,20 +468,20 @@
               </li>
             </ul>
             <p class="footer-text">
-                Hangar 10, Inc d/b/a Resource Air Charter per FAA Certificate
-                #LFBA048G
-              </p>
-              <p class="footer-text">
-                50 South Amelia Earheart Drive Brownsville, TX 78521
-              </p>
-              <p class="footer-text">
-                Production Manufacturers Authority PQ04405CE
-              </p>
-              <p class="footer-text">STC# SA159CH, SA1624GL</p>
-              <p class="footer-text">
-                All air charters not flown by RAC are arranged with FAA approved
-                135 and 121 carriers.
-              </p>
+              Hangar 10, Inc d/b/a Resource Air Charter per FAA Certificate
+              #LFBA048G
+            </p>
+            <p class="footer-text">
+              50 South Amelia Earheart Drive Brownsville, TX 78521
+            </p>
+            <p class="footer-text">
+              Production Manufacturers Authority PQ04405CE
+            </p>
+            <p class="footer-text">STC# SA159CH, SA1624GL</p>
+            <p class="footer-text">
+              All air charters not flown by RAC are arranged with FAA approved
+              135 and 121 carriers.
+            </p>
           </div>
           <div class="col-md-4">
             <h5>Links</h5>
