minor updates to style and images

--- a/cargo-services.html
+++ b/cargo-services.html
@@ -386,8 +386,8 @@
               guarantee your delivery every step of the way. Ask flight
               operations about how RAC can simplify your air transport needs.
             </p>
-            <div class="pt-2 link-container">
-              <a href="/contact" class="btn btn-primary"
+            <div class="pt-2 link-container text-center">
+              <a href="/contact" class="btn btn-primary text-white"
                 >Click here to discuss your next mission</a
               >
             </div>
