--- a/index.html
+++ b/index.html
@@ -342,8 +342,8 @@
           <div class="col-lg-6">
             <img
               class="img-fluid"
-              src="resources/css/imgs/tracker.jpg"
-              alt="cargo tracking service screenshot"
+              src="resources/imgs/cargo-service.jpg"
+              alt="loading cargo onto a plane with a forklift"
             />
           </div>
           <div class="col-lg-6 order-lg-first">
